test/sema/typeck/var/let-without-init.out
error: `let` binding is missing initialization.
--> let-without-init.dora:1:10
 | fn f() { let _x: Int32; }
            ~~~~~~~~~~~~~~
 | 
1 error found.
